--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
     <title>Linktree</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-    <img id="logo" src="./img/logo.jpg">
-    <a href="#" target="_blank" id="username">@wunderheit.de</a>
-		
+  <body>
+    <img id="logo" src="./img/logo.jpg"><a href="#" target="_blank" id="username">@wunderheit.de</a>
+
     <div id="buttons">
-	<a class="button" href="#" target="_blank">Link 1</a>
-	<a class="button" href="#" target="_blank">Link 2</a>
-	<a class="button" href="#" target="_blank">Link 3</a>
-	<a class="button" href="#" target="_blank">Link 4</a>
+      <a class="button" href="#" target="_blank">Link 1</a>
+      <a class="button" href="#" target="_blank">Link 2</a>
+      <a class="button" href="#" target="_blank">Link 3</a>
+      <a class="button" href="#" target="_blank">Link 4</a>
     </div>
-		
-	<div id="followme">follow me<br>
-	<a href="#" target="_blank"><img id="socialicons" src="./img/icons/facebook.png"></a>
-	<a href="#" target="_blank"><img id="socialicons" src="./img/icons/instagram.png"></a>
-	<a href="#" target="_blank"><img id="socialicons" src="./img/icons/tiktok.png"></a>
-	<a href="#" target="_blank"><img id="socialicons" src="./img/icons/linkedin.png"></a>
-	<a href="#" target="_blank"><img id="socialicons" src="./img/icons/github.png"></a>
-	</div>
 
-	<div id="footer">
-	<a href="#" target="_blank">Impressum</a> | <a href="#" target="_blank">Datenschutz</a>
-	</div>
-</body>
+    <div id="followme">
+      follow me<br />
+      <a href="#" target="_blank"><img id="socialicons" src="/img/icons/facebook.png"></a>
+      <a href="#" target="_blank"><img id="socialicons" src="/img/icons/instagram.png"></a>
+      <a href="#" target="_blank"><img id="socialicons" src="/img/icons/tiktok.png"></a>
+      <a href="#" target="_blank"><img id="socialicons" src="/img/icons/linkedin.png"></a>
+      <a href="#" target="_blank"><img id="socialicons" src="/img/icons/github.png"></a>
+    </div>
+
+    <div id="footer">
+      <a href="#" target="_blank">Impressum</a> |
+      <a href="#" target="_blank">Datenschutz</a>
+    </div>
+  </body>
 </html>
